Adding angular-ui - scrollfix our form.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,6 @@ html(ng-app="myApp")
     title Posterboy
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='/js/lib/angular-ui/angular-ui.css')
   body
     block body
