--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -7,5 +7,5 @@ div.span5
     div {{post.text}}
     a(href='readPost/{{post.id}}') More
 
-div.span4
+div(class='span4', ui-scrollfix='-10')
   include addPost
