--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,10 @@ block body
 
   div(ng-view class='span10')
 
+  script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
+  script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js')
   script(src='js/lib/angular/angular.js')
+  script(src='js/lib/angular-ui/angular-ui.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
