--- a/views/index.jade
+++ b/views/index.jade
@@ -17,3 +17,4 @@ block body
   script(src='js/controllers.js')
   script(src='js/filters.js')
   script(src='js/directives.js')
+  script(src='js/lib/autosize/jquery.autosize.js')
