--- a/public/css/app.css
+++ b/public/css/app.css
@@ -89,6 +89,24 @@ span.controls a {
   border-radius: 3px;
 }
 .message {
-  margin-bottom: 3px;
+  margin-bottom: 0;
   word-wrap: break-word;
+}
+.message::before {
+  content: "";
+  display: block;
+  height: 0;
+  width: 0;
+  border: 10px solid #eee;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #eee transparent transparent;
+  position: absolute;
+  left: 51px;
+  top: 15px;
+}
+.message-outer {
+  padding: 3px;
+  background: #eee;
+  border-radius: 3px;
+  margin-bottom: 5px;
 }
