--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -2,13 +2,14 @@ div.span5
   div(ng-repeat='post in posts | orderBy:id:reverse', class='msg-container')
     div.avatar
       | <img src='/img/default-avatar.png' class='default-avatar' />
-    div.message.well
-      span.controls
-        a(href='deletePost/{{post.id}}', class='close', title='delete') &times;
-        a(href='editPost/{{post.id}}', class='pull-right', title='edit')
-          i.icon-edit
-      div {{post.text}}
-      a(href='readPost/{{post.id}}') More
+    div.message-outer
+      div.message.well
+        span.controls
+          a(href='deletePost/{{post.id}}', class='close', title='delete') &times;
+          a(href='editPost/{{post.id}}', class='pull-right', title='edit')
+            i.icon-edit
+        div {{post.text}}
+        a(href='readPost/{{post.id}}') More
 
 div(class='span4', ui-scrollfix='-10')
   include addPost
