--- a/views/partials/editPost.jade
+++ b/views/partials/editPost.jade
@@ -1,5 +1,6 @@
-h2 Edit post
-p Body:
-textarea(ng-model='form.text', cols='50', rows='15')
-p
-  button(ng-click='editPost()') Edit Post
+
+div.span4
+  p What did you say?
+  textarea(ng-model='form.text', class='span4', type='text', placeholder='Whatcha workin on?', ui-jq='autosize')
+  p
+    button(ng-click='editPost()', class='btn btn-primary pull-right') Edit Post
