--- a/public/css/app.css
+++ b/public/css/app.css
@@ -110,7 +110,7 @@ span.controls a {
   border-radius: 3px;
   margin-bottom: 5px;
 }
-.msg-remains,
+/*.msg-remains,*/
 .msg-collapse {
   display: none;
 }
@@ -118,4 +118,14 @@ span.controls a {
 .msg-collapse {
   font-size: 12px;
   padding: 5px;
+}
+
+.msg-remains {
+  transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  opacity: 0;
+  max-height: 0;
+  display: block;
 }
