Adding markdown with preview support.

--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -9,11 +9,11 @@ div.span5
           a(href='editPost/{{post.id}}', class='pull-right', title='edit')
             i.icon-edit
         div(class='message-text msg-{{post.id}}')
-          {{post.text}}
+          span(class='msg-preview', ng-bind-html-unsafe="post.text|convert")
           a(href='javascript://', class='msg-expand', ng-click='msgExpand(post)') expand »
-          span(class='msg-remains')
-            {{post.remains}}
-            a(href='javascript://', class='msg-collapse', ng-click='msgCollapse(post)') « collapse
+          span(class='msg-remains', ng-bind-html-unsafe="post.remains|convert")
+          a(href='javascript://', class='msg-collapse', ng-click='msgCollapse(post)') « collapse
 
 div(class='span4', ui-scrollfix='-10')
+  include previewPost
   include addPost
