--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,7 @@ block body
   script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js')
   script(src='js/lib/angular/angular.js')
   script(src='js/lib/angular-ui/angular-ui.js')
+  script(src='js/lib/marked/marked.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
