Fixes #1: remove autosize as it seems to load before the text creating a bug.

--- a/views/partials/editPost.jade
+++ b/views/partials/editPost.jade
@@ -1,6 +1,6 @@
 
 div.span4
   p What did you say?
-  textarea(ng-model='form.text', class='span4', type='text', placeholder='Whatcha workin on?', ui-jq='autosize')
+  textarea(ng-model='form.text', id='postbox', class='span4', type='text')
   p
     button(ng-click='editPost()', class='btn btn-primary pull-right') Edit Post
