small sctructural changes

--- a/views/partials/addPost.jade
+++ b/views/partials/addPost.jade
@@ -1,3 +1,4 @@
+include previewPost
 form(class='navbar-form pull-left')
   textarea(ng-model='form.text', id='postbox', class='span4', type='text', placeholder='Whatcha workin on?', ui-jq='autosize')
   p
