--- a/views/partials/editPost.jade
+++ b/views/partials/editPost.jade
@@ -1,6 +1,6 @@
-
-div.span4
-  p What did you say?
-  textarea(ng-model='form.text', id='postbox', class='span4', type='text')
-  p
-    button(ng-click='editPost()', class='btn btn-primary pull-right') Edit Post
+div.span6
+  include previewPost
+  form(class='navbar-form pull-left')
+    textarea(ng-model='form.text', id='postbox', class='span6', type='text')
+    p
+      button(ng-click='editPost()', class='btn btn-primary pull-right') Edit Post
