Changes to controls  - little less css with reusable classes  - change the delete icon  - add in permalink which Fixes #4

--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -4,10 +4,13 @@ div.span5
       | <img src='/img/default-avatar.png' class='default-avatar' />
     div.message-outer
       div.message.well
-        span.controls
-          a(href='deletePost/{{post.id}}', class='close', title='delete') &times;
-          a(href='editPost/{{post.id}}', class='pull-right', title='edit')
+        div(class='controls clearfix')
+          a(href='deletePost/{{post.id}}', class='close', title='delete')
+            i.icon-remove-circle
+          a(href='editPost/{{post.id}}', class='close', title='edit')
             i.icon-edit
+          a(href='readPost/{{post.id}}', class='close', title='more')
+            i.icon-resize-full
         div(class='message-text msg-{{post.id}}')
           span(class='msg-preview', ng-bind-html-unsafe="post.text|convert")
           a(href='javascript://', class='msg-expand', ng-click='msgExpand(post)')
