--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,29 +29,7 @@
   padding: 0;
 }
 
-
-.icon-edit {
-  float: right;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 24px;
-  color: #000000;
-  text-shadow: 0 1px 0 #ffffff;
-  opacity: 0.2;
-  filter: alpha(opacity=20);
-  margin-top: 2px;
-  background-position: -96px -70px;
-  height: 20px;
-}
-.icon-edit:hover {
-  color: #000000;
-  text-decoration: none;
-  cursor: pointer;
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-}
-
-span.controls a {
+.controls a {
   padding-left: 5px;
 }
 
