--- a/views/partials/addPost.jade
+++ b/views/partials/addPost.jade
@@ -2,4 +2,5 @@ include previewPost
 form(class='navbar-form pull-left')
   textarea(ng-model='form.text', id='postbox', class='span4', type='text', placeholder='Whatcha workin on?', ui-jq='autosize')
   p
+    img(src='/captcha.png')
     button(ng-click='submitPost()', class='btn btn-primary pull-right', type='submit') Post
