--- a/views/partials/addPost.jade
+++ b/views/partials/addPost.jade
@@ -3,4 +3,5 @@ form(class='navbar-form pull-left')
   textarea(ng-model='form.text', id='postbox', class='span4', type='text', placeholder='Whatcha workin on?', ui-jq='autosize')
   p
     img(src='/captcha.png')
+    input(ng-model='form.captcha', type='text', id='captcha')
     button(ng-click='submitPost()', class='btn btn-primary pull-right', type='submit') Post
