remove ui-scrollfix property

--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -15,5 +15,5 @@ div.span5
           span(class='msg-preview', ng-bind-html-unsafe="post.text|convert")
           a(href='javascript://', class='msg-expand', ng-click='msgExpand(post)')
 
-div(class='span4', ui-scrollfix='-10')
+div(class='span4')
   include addPost
